Fix ctoa alignment

--- a/src/dsync/DirectoriesWrapper/index.module.css
+++ b/src/dsync/DirectoriesWrapper/index.module.css
@@ -1,6 +1,6 @@
 .ctoa {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .listView {
